--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "generate-icons": "node scripts/create-icons.js"
   },
   "dependencies": {
+    "@fontsource/syne": "^5.2.7",
     "@studio-freight/lenis": "^1.0.42",
-    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "next": "^14.2.35",
@@ -24,11 +25,13 @@
     "react-dom": "^18.3.1",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "25.1.0",
-    "@types/react": "19.2.10",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "tsx": "^4.21.0",
     "typescript": "5.9.3"
   }
